# bereg

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  design-qa.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  notes.py
backend/app/core/: security.py  telegram.py
backend/app/models/: note.py  user.py
backend/app/schemas/: auth.py  note.py
docs/plans/: 2026-07-18-cabinet-profile-header-design.md  2026-07-18-profile-motion-and-therapy-design.md  2026-07-18-session-history-and-multiselect-design.md  2026-07-19-therapy-dashboard-and-balance-design.md  2026-07-20-catalog-publication-from-specialist-profile-design.md  2026-07-20-client-practices-redesign-design.md  2026-07-20-fair-psychologist-catalog-design.md  2026-07-20-home-and-session-work-hours-design.md  2026-07-20-home-and-session-work-hours-implementation.md  2026-07-20-specialist-profile-catalog-alignment-design.md  2026-07-22-immersive-mood-check-in-design.md  2026-07-22-immersive-mood-check-in-implementation.md  2026-07-22-mood-character-redesign.md  2026-07-22-mood-roulette-one-screen-design.md
docs/qa/: mood-design-qa.md
frontend/: .env.example  next.config.mjs  package.json
frontend/prisma/: schema.prisma
frontend/scripts/: bot.ts  repro.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  template.tsx
frontend/src/components/: app-shell.tsx  balance-bars.tsx  balance-flow.tsx  blocks.tsx  ui.tsx  (+39 more)
(+51 files in other folders)
